# badgr-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  crontab  deploy.sh  deployment.md  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.docker/: Dockerfile.debug.api  Dockerfile.dev.api  Dockerfile.prod.api
.docker/config/nginx/: nginx.conf
.docker/config/nginx/sites-available/: site.conf
.docker/etc/: settings_local.dev.py.example  settings_local.prod.py.example  site.conf  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: registry-build-push.yml  registry-purge-pr.yml  registry-purge.yml  sync.yml
apps/backpack/: admin.py  api.py  api_v1.py  api_v3.py  badge_connect_api.py  badge_connect_urls.py  models.py  serializers_bcv1.py  serializers_v1.py  serializers_v2.py  share_urls.py  sharing.py  v1_api_urls.py  v2_api_urls.py  v3_api_urls.py  views.py
apps/backpack/management/commands/: emit_old_share_events.py
apps/backpack/tests/: test_assertions.py  test_badge_connect.py  test_collections.py  utils.py
apps/badgeuser/: admin.py  api.py  api_v1.py  authcode.py  backends.py  forms.py  managers.py  middleware.py  models.py  serializers_v1.py  serializers_v2.py  tasks.py  utils.py  v1_api_urls.py  v2_api_urls.py
apps/badgeuser/management/commands/: delete_superseded_users.py  export_emails.py
apps/badgeuser/migrations/: 0027_alter_badgeuser_first_name.py
apps/badgeuser/tests/: tests.py
apps/badgrlog/: __init__.py  badgrlogger.py  views.py
apps/badgrlog/events/: issuer.py  public.py
apps/badgrsocialauth/: adapter.py  admin.py  models.py  permissions.py  urls.py  views.py
apps/badgrsocialauth/providers/facebook/: provider.py  tests.py
apps/badgrsocialauth/providers/kony/: urls.py  views.py
apps/badgrsocialauth/providers/oauth2_idtoken/: adapter.py  provider.py
apps/badgrsocialauth/providers/tests/: base.py  test_third_party.py
apps/badgrsocialauth/providers/twitter/: provider.py  tests.py
apps/badgrsocialauth/tests/: test_saml2.py  test_socialaccount_api.py
apps/entity/: api.py  api_v3.py  authentication.py  models.py
apps/externaltools/: api.py  models.py  serializers_v2.py  v1_api_urls.py  v2_api_urls.py
apps/health/: views.py
apps/issuer/: admin.py  api.py  api_v1.py  api_v3.py  helpers.py  managers.py  models.py  permissions.py  public_api.py  public_api_urls.py  serializers_v1.py  serializers_v2.py  serializers_v3.py  tasks.py  utils.py  v1_api_urls.py  v2_api_urls.py  v3_api_urls.py
apps/issuer/management/: migrate_criteria.py
apps/issuer/management/commands/: clean_badge_criteria.py  fix_badgeclass_images.py  migrate_learningpath_category.py  migrate_studyload_extension.py  populate_badgeinstance_ob_json_2_0.py  update_badgeinstance_user.py  update_extensions.py  verify_get_json.py
apps/issuer/migrations/: 0059_remove_issuer_image_preview.py  0060_issuer_verified.py  0061_auto_20211118_0923.py  0062_issuer_category.py  0063_auto_20211122_0622.py  0064_auto_20211122_0929.py  0065_auto_20240220_1218.py  0065_badgeclass_imageframe.py  0066_auto_20240220_2344.py  0066_qrcode_requestedbadge.py  0067_auto_20240222_0647.py  0067_issuer_intendeduseverified.py  0067_learningpath_learningpathbadge_learningpathparticipant_learningpathtag_requestedlearningpath.py  0068_auto_20240222_0720.py  0068_issuer_intendeduseverified.py  0069_delete_learningpathparticipant.py  0069_issuer_private_key.py  0070_auto_20241212_1525.py  0070_auto_20250401_0315.py  0070_badgeclass_copy_permissions.py  0071_issuerstaffrequest.py  0071_qrcode_notifications.py  0072_badgeinstance_ob_json_2_0.py  0072_merge_20250407_1526.py  0073_auto_20250408_1502.py  0074_badgeinstance_ob_json_2_0.py  0075_importedbadgeassertion_importedbadgeassertionextension.py  0076_badgeclass_criteria.py
apps/issuer/tests/: test_assertion.py  test_badgeclass.py  test_blacklist.py  test_issuer.py  test_issuer_admin_api.py  test_managers.py  test_oauth2_tokens.py  test_public.py  test_v1_api.py  test_v2_api.py
apps/mainsite/: __init__.py  account_adapter.py  admin.py  admin_actions.py  apps.py  authentication.py  badge_pdf.py  blacklist.py  celery.py  context_processors.py  drf_fields.py  exceptions.py  formatters.py  managers.py  middleware.py  mixins.py  models.py  oauth2_api.py  oauth_validator.py  permissions.py  serializers.py  settings.py  settings_local.py.example  settings_tests.py  settings_testserver.py  signals.py  testrunner.py  urls.py  utils.py  validators.py  views.py
apps/mainsite/management/: extract_crontab.py
apps/mainsite/management/commands/: clean_email_records.py  cleanup_altcha.py  clear_cache.py  convert_to_unicode.py  dist.py  generate_token_scopes.py  list_esco_issuers.py  seed.py  send_badgerequest_mails.py
apps/mainsite/migrations/: 0025_auto_20250227_0945.py
apps/mainsite/static/swagger-ui/: API_DESCRIPTION_v2.md
apps/mainsite/templates/admin/: base_site.html
apps/mainsite/templates/email/: base.html
apps/mainsite/templates/error/: base.html
apps/mainsite/templates/public/: base.html
apps/mainsite/tests/: base.py  test_api_throttle.py  test_badgrapp.py  test_misc.py  test_oauth2.py
apps/oidc/: oeb_oidc_authentication_backend.py  oidc_views.py
openbadges/: __init__.py
openbadges/verifier/: __init__.py  utils.py  verifier.py
openbadges_bakery/: __init__.py  cli.py  png_bakery.py  svg_bakery.py  tests.py  utils.py
scripts/: change-extension-url.sh
(+54 files in other folders)
