[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["config"]

[tool.djlint]
profile = "django"
ignore = "H021,H005,H031,D018,H006,H019,H023,H030,H006,H013, H025"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
[tool.poetry]
name = "badgr-server"
version = "1.5.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
django = "3.2"
semver = "^3.0.2"
python-dateutil = "^2.9.0.post0"
mysqlclient = "^2.2.6"
python-resize-image = "1.1.19"
django-cachemodel = "^2.2.0"
django-basic-models = "^4.0.0"
django-object-actions = "1.1.0"
pymemcache = "4.0.0"
djangorestframework = "3.12.2"
django-allauth = "0.63"
oauthlib = "3.1.0"
rules = "3.3"
django-oauth-toolkit = "1.3.2"
django-cors-headers = "3.3.0"
django-autoslug = "1.9.8"
puremagic = "1.6"
defusedxml = "^0.7.1"
django-prometheus = "2.3.1"
jsonfield = "2.1.0"
django-markdownify = "0.1.0"
celery = "4.1.1"
django-celery-results = "1.0.1"
python-json-logger = "0.1.2"
apispec-djangorestframework = "1.1.1"
apispec = "0.22.0"
responses = "0.12.1"
mock = "5.1.0"
django-mock-queries = "2.1.5"
lti = "0.9.4"
pysaml2 = "6.5.1"
geopy = "2.4.1"
tox = "^4.23.2"
mozilla-django-oidc = "^4.0.1"
aniso8601 = "^9.0.1"
pyld = "*"
rsa = "^4.9"
pydux = "^0.2.2"
ecdsa = "^0.19.0"
decorator = "^5.1.1"
pyasn1 = "^0.6.1"
backports-csv = "^1.0.7"
reportlab = "^4.2.5"
svglib = "^1.5.1"
cairosvg = "^2.7.1"
pyjwt = "*"
qrcode = "*"
base58 = "^2.1.1"
rdflib = "*"
django-dbbackup = "^4.2.1"
pycryptodome = "^3.21.0"
rfc3986 = "^2.0.0"
jsonschema = "^4.23.0"
future = "^1.0.0"
requests-cache = "^1.2.1"
python-jose = "^3.3.0"
language-tags = "^1.2.0"
validators = "^0.34.0"
mimeparse = "^0.1.3"

[tool.poetry.group.dev.dependencies]
django-stubs = "^5.1.1"

